css align fixes

--- a/src/app/components/products/products/products.component.css
+++ b/src/app/components/products/products/products.component.css
@@ -27,14 +27,19 @@ img {
 }
 
 mat-card {
-    width: 15rem;
+    width: 15vw;
     display: flex;
     justify-content: start;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 1%;
+    margin: 1vw;
 }
 
 mat-card-actions {
-    margin: auto 0 0;
+    margin: auto;
+}
+
+mat-card-actions button {
+    margin: 0 auto;
+    margin-left: 1vw;
 }
